// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomateSubscriptionModal /> should display image 1`] = `
<img
  alt="automation features"
  class="image"
  src="foo.png"
/>
`;

exports[`<AutomateSubscriptionModal /> should display loader 1`] = `
<span
  class="ui-button-content-a432"
>
  I am sure
</span>
`;

exports[`<AutomateSubscriptionModal /> should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<AutomateSubscriptionModal /> should render for customers already with full add-on features 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Manage AI Agent
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="cancel-automation-addon-modal-body"
            >
              <div
                class="container"
              >
                <div
                  class="card"
                >
                  <div
                    class="cardHeader"
                  >
                    <div
                      class="title"
                    >
                      Ready to upgrade with 
                      AI Agent
                      ?
                    </div>
                  </div>
                  <div
                    class="features"
                  >
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Lower ticket volume, resolution time, and stress
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Choose a plan based on your usage
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Change plans or cancel at any time
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Increase conversion and drive more revenue
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card"
                >
                  <div
                    class="cardHeader"
                  >
                    <div
                      class="title"
                    >
                      Select a plan
                    </div>
                    <a
                      class="link"
                      href="https://link.gorgias.com/vyp"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      Explore Pricing Plans
                      <i
                        class="linkIcon material-icons"
                      >
                        open_in_new
                      </i>
                    </a>
                  </div>
                  <div
                    class="selectedPlan"
                  >
                    <div
                      class="selector"
                    >
                      <div>
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <div
                              class="select dropdown-toggle selectFullWidth"
                            >
                              <span
                                aria-label="Plan"
                                class="label"
                                data-testid="selected-priceSelect"
                                style="min-width: 10px; opacity: 1;"
                              >
                                30
                              </span>
                              <input
                                autocomplete="chrome-off"
                                class="input"
                                id="priceSelect"
                                style="min-width: 10px;"
                                type="text"
                                value=""
                              />
                              <i
                                class="material-icons dropdownIcon"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            class="options optionsFullWidth dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            <button
                              class="option option--focused dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                30
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                30
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                190
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530+
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="counter"
                      >
                        <div>
                          automated interactions
                          /
                          month
                        </div>
                        <i
                          class="material-icons"
                          id="priceSelectInfo"
                        >
                          info_outlined
                        </i>
                      </div>
                    </div>
                    <div
                      class="planPrice"
                    >
                      <strong>
                        $30
                        /
                        month
                      </strong>
                    </div>
                  </div>
                  <div
                    class="payment show"
                  >
                    <div
                      class="container loader"
                    >
                      <div
                        class="inner"
                        style="min-height: auto;"
                      >
                        <i
                          class="icon-custom icon-circle-o-notch md-spin"
                          style="font-size: 40px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer footerUnsubscribe modal-footer"
            >
              <button
                aria-disabled="false"
                class="wrapper fill destructive medium"
                type="button"
              >
                <span
                  class="content"
                >
                  Cancel subscription
                </span>
              </button>
              <button
                aria-disabled="false"
                class="wrapper fill secondary medium"
                type="button"
              >
                <span
                  class="content"
                >
                  OK
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`<AutomateSubscriptionModal /> should render the modal 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Subscribe to AI Agent
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="modalBody modal-body"
              data-candu-id="manage-automation-addon-modal-body"
            >
              <div
                class="container"
              >
                <div
                  class="card"
                >
                  <div
                    class="cardHeader"
                  >
                    <div
                      class="title"
                    >
                      Ready to upgrade with 
                      AI Agent
                      ?
                    </div>
                  </div>
                  <div
                    class="features"
                  >
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Lower ticket volume, resolution time, and stress
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Choose a plan based on your usage
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Change plans or cancel at any time
                      </div>
                    </div>
                    <div
                      class="feature"
                    >
                      <i
                        class="material-icons rounded"
                      >
                        check
                      </i>
                      <div>
                        Increase conversion and drive more revenue
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="card"
                >
                  <div
                    class="cardHeader"
                  >
                    <div
                      class="title"
                    >
                      Select a plan
                    </div>
                    <a
                      class="link"
                      href="https://link.gorgias.com/vyp"
                      rel="noreferrer noopener"
                      target="_blank"
                    >
                      Explore Pricing Plans
                      <i
                        class="linkIcon material-icons"
                      >
                        open_in_new
                      </i>
                    </a>
                  </div>
                  <div
                    class="selectedPlan"
                  >
                    <div
                      class="selector"
                    >
                      <div>
                        <div
                          class="dropdown"
                        >
                          <div
                            aria-expanded="false"
                            aria-haspopup="true"
                            class=""
                            data-toggle="dropdown"
                          >
                            <div
                              class="select dropdown-toggle selectFullWidth"
                            >
                              <span
                                aria-label="Plan"
                                class="label"
                                data-testid="selected-priceSelect"
                                style="min-width: 10px; opacity: 1;"
                              >
                                30
                              </span>
                              <input
                                autocomplete="chrome-off"
                                class="input"
                                id="priceSelect"
                                style="min-width: 10px;"
                                type="text"
                                value=""
                              />
                              <i
                                class="material-icons dropdownIcon"
                              >
                                arrow_drop_down
                              </i>
                            </div>
                          </div>
                          <div
                            aria-hidden="true"
                            class="options optionsFullWidth dropdown-menu"
                            role="menu"
                            tabindex="-1"
                          >
                            <button
                              class="option option--focused dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                30
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                30
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                190
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530
                              </span>
                            </button>
                            <button
                              class="option dropdown-item"
                              role="menuitem"
                              tabindex="0"
                              type="button"
                            >
                              <span>
                                530+
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                      <div
                        class="counter"
                      >
                        <div>
                          automated interactions
                          /
                          month
                        </div>
                        <i
                          class="material-icons"
                          id="priceSelectInfo"
                        >
                          info_outlined
                        </i>
                      </div>
                    </div>
                    <div
                      class="planPrice"
                    >
                      <strong>
                        $30
                        /
                        month
                      </strong>
                    </div>
                  </div>
                  <div
                    class="payment show"
                  >
                    <div
                      class="container loader"
                    >
                      <div
                        class="inner"
                        style="min-height: auto;"
                      >
                        <i
                          class="icon-custom icon-circle-o-notch md-spin"
                          style="font-size: 40px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                aria-disabled="false"
                class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432"
                type="button"
              >
                <span
                  class="ui-button-content-a432"
                >
                  Cancel
                </span>
              </button>
              <div>
                <button
                  aria-disabled="true"
                  class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-primary-a432 ui-button-isdisabled-a432"
                  type="button"
                >
                  <span
                    class="ui-button-content-a432"
                  >
                    I am sure
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
